// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleSheet/createStyleResolver resolve resolves inline-style pointerEvents to classname 1`] = `
Object {
  "classList": Array [
    "r-pointerEvents-12vffkv",
  ],
  "className": "r-pointerEvents-12vffkv",
}
`;

exports[`StyleSheet/createStyleResolver resolve without register, resolves to inline styles 1`] = `
Object {
  "classList": Array [],
  "className": "",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "left": "50px",
    "opacity": 0.5,
    "position": "absolute",
    "width": "100px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolve without register, resolves to inline styles 2`] = `
Object {
  "classList": Array [],
  "className": "",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "left": "50px",
    "opacity": 0.5,
    "position": "absolute",
    "width": "200px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolve without register, resolves to inline styles 3`] = `
Object {
  "classList": Array [],
  "className": "",
  "style": Object {
    "borderBottomColor": "rgba(255,0,0,1.00)",
    "borderBottomWidth": "0px",
    "borderLeftColor": "rgba(255,0,0,1.00)",
    "borderLeftWidth": "0px",
    "borderRightColor": "rgba(255,0,0,1.00)",
    "borderRightWidth": "0px",
    "borderTopColor": "rgba(255,0,0,1.00)",
    "borderTopWidth": "0px",
    "left": "50px",
    "opacity": 0.5,
    "position": "absolute",
    "width": "100px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolveWithNode next class names have priority over current inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "opacity": 1,
  },
}
`;

exports[`StyleSheet/createStyleResolver resolveWithNode next inline styles have priority over current inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "WebkitTransform": "scale(2)",
    "opacity": 1,
    "transform": "scale(2)",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolveWithNode preserves unrelated class names 1`] = `
Object {
  "className": "unknown-class-1 unknown-class-2",
  "style": Object {},
}
`;

exports[`StyleSheet/createStyleResolver resolveWithNode preserves unrelated inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "fontSize": "20px",
    "opacity": 1,
  },
}
`;

exports[`StyleSheet/createStyleResolver resolveWithNode when isRTL=true & doLeftAndRightSwapInRTL=false, resolves to non-flipped inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "marginRight": "10px",
    "paddingLeft": "10px",
    "right": "10px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolveWithNode when isRTL=true, resolves to flipped classNames 1`] = `
Object {
  "className": "",
  "style": Object {
    "left": "1px",
    "marginRight": "10px",
    "right": "5px",
  },
}
`;

exports[`StyleSheet/createStyleResolver resolveWithNode when isRTL=true, resolves to flipped inline styles 1`] = `
Object {
  "className": "",
  "style": Object {
    "left": "10px",
    "marginRight": "10px",
    "right": "5px",
  },
}
`;
